# trinomial_tree

./: .gitignore  LICENCE.md  README.md  app.py  pyproject.toml  test.py  trinomial_tree_showcase.ipynb
.github/workflows/: ci.yml
src/: __init__.py
src/analysis/: __init__.py  convergence_analysis.py  empirical_greeks.py  experiments_dashboard.py  module_graphique.py  module_grecques_empiriques.py  module_pricing_analysis.py  pricing_analysis.py  tree_graph.py
src/analysis/experiments/: consistency.py  convergence.py  sensitivity.py  structural.py
src/analysis/utils/: tree_inspector.py
src/pricing/: __init__.py  barrier.py  black_scholes.py  config.py  enums.py  inductive_tree.py  market.py  option.py  payoff.py  pricer.py  tree_node.py
src/trinomial_tree/: __init__.py
src/trinomial_tree/analysis/: empirical_greeks.py  visualization.py
src/trinomial_tree/analysis/experiments/: __init__.py  consistency.py  convergence.py  framework.py  sensitivity.py  structural.py
src/trinomial_tree/pricing/: __init__.py  barrier.py  black_scholes.py  inductive_tree.py  option.py  payoff.py  tree_node.py
tests/: test_barrier_validation.py  test_convergence_to_black_scholes.py  test_edge_cases.py  test_exotic_payoffs.py  test_financial_sanitary_check.py  test_inductive_analysis.py  test_performance.py
