[project]
name = "trinomial-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
